--- a/dev-olmo-v2-mobile.html
+++ b/dev-olmo-v2-mobile.html
@@ -14,43 +14,255 @@
 
 <body>
     <div class="body-container">
-        <header class="header-container headerfixed">
+        <header class="header-container header-fixed">
             <div class="header-logo center-withflex"> <a class="center-withflex" href="#"><img
-                        class="headerimg center-withflex"
+                        class="header-img center-withflex"
                         src="https://dsathemes.com/html/olmo_1.4/files/images/logo-01.png" alt="logo"></a></div>
-            <div class="center-withflex headernav"> 
+            <div class="center-withflex header-nav">
                 <ul class="headerul">
-                    <li> <a class="a-darkcolorbold" href="#"> Home </a><img class="headermenuimg"
+                    <li> <a class="a-dark-color-bold" href="#"> Home </a><img class="headermenuimg"
                             src="https://icon-library.com/images/triangle-icon-png/triangle-icon-png-18.jpg" alt="down">
                     </li>
-                    <li> <a class="a-darkcolorbold" href="#"> About </a> </li>
-                    <li> <a class="a-darkcolorbold" href="#"> Pages </a><img class="headermenuimg"
+                    <li> <a class="a-dark-color-bold" href="#"> About </a> </li>
+                    <li> <a class="a-dark-color-bold" href="#"> Pages </a><img class="headermenuimg"
                             src="https://icon-library.com/images/triangle-icon-png/triangle-icon-png-18.jpg" alt="down">
                     </li>
-                    <li> <a class="a-darkcolorbold" href="#"> Auth Pages </a><img class="headermenuimg"
+                    <li> <a class="a-dark-color-bold" href="#"> Auth Pages </a><img class="headermenuimg"
                             src="https://icon-library.com/images/triangle-icon-png/triangle-icon-png-18.jpg" alt="down">
                     </li>
-                    <li> <a class="a-darkcolorbold" href="#"> Features </a> </li>
-                    <li> <a class="a-darkcolorbold" href="#"> FAQs </a> </li>
-                    <button class="headerbutton">Try For Free</button>
+                    <li> <a class="a-dark-color-bold" href="#"> Features </a> </li>
+                    <li> <a class="a-dark-color-bold" href="#"> FAQs </a> </li>
+                    <button class="header-button">Try For Free</button>
                 </ul>
             </div>
         </header>
-
         <main class="main-container">
-            <div class="betweenheaderandmain-container"> przestrzeń pod headerem</div>
-            <div class="main-container-places-column"> h1 </div>
-            <div class="main-container-places-row"> 3 okienka </div>
-            <div class="main-container-places-row">h2</div>
-            <div class="main-container-places-row">tabelka</div>
-            <div class="main-container-places-column">podpis tabeli</div>
+            <div class="main-container-places-column">
+                <!-- TU NA ROZMIARACH MOBILNYCH SIĘ NIE CENTRUJE. OGARNĄĆ WHY PO KLOCKACH WEWN.-->
+                <h1 class="h1-font-size center-withflex"> Simple And Flexible Pricing </h1>
+
+                <h2 class="h2-font-size-first center-withflex"> No credit card required. Change or cancel your plan
+                    anytime </h2>
+
+            </div>
+
+            <div class="main-container-places-row">
+                <div class="main-prices-container-place-and-width-row">
+
+                    <div class="main-price-1-window-container">
+                        <div class="main-price-windows-look">1</div>
+                    </div>
+                    <div class="main-price-1-window-container">
+                        <div class="main-price-windows-look">2</div>
+                    </div>
+                    <div class="main-price-1-window-container">
+                        <div class="main-price-windows-look">3</div>
+                    </div>
+
+                </div>
+            </div>
+
+            <div class="main-container-places-row">
+                <h2 class="h2-font-size-second center-withflex"> Compare Pricing Packages </h2>
+            </div>
+
+
+            <div class="main-container-places-row">
+                <div class="table-offer">
+                    <table>
+                        <tr>
+                            <th></th>
+                            <th>Basic</th>
+                            <th>Agency</th>
+                            <th>Advanced</th>
+                        </tr>
+
+                        <tr>
+                            <td class="bold">25 Projects</td>
+                            <td class="center">
+                                <!-- usunąć te klasy-->
+                                <p><img src="https://icon-library.com/images/green-check-icon-png/green-check-icon-png-13.jpg"
+                                        alt="green"> </p>
+                            </td>
+                            <td class="center">
+                                <p><img src="https://icon-library.com/images/green-check-icon-png/green-check-icon-png-13.jpg"
+                                        alt="green"> </p>
+                            </td>
+                            <td class="center">
+                                <p><img src="https://icon-library.com/images/green-check-icon-png/green-check-icon-png-13.jpg"
+                                        alt="green"> </p>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td class="bold">100 Projects</td>
+                            <td class="center">
+                                <p><img src="https://toppng.com/uploads/preview/x-cross-close-symbol-icon-button-gui-close-icon-grey-11553403425jbckbu0bie.png"
+                                        alt="iks"></p>
+                            </td>
+                            <td class="center">
+                                <p><img src="https://icon-library.com/images/green-check-icon-png/green-check-icon-png-13.jpg"
+                                        alt="green"> </p>
+                            </td>
+                            <td class="center">
+                                <p><img src="https://icon-library.com/images/green-check-icon-png/green-check-icon-png-13.jpg"
+                                        alt="green"> </p>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td class="bold">Unlimited</td>
+                            <td class="center">
+                                <p><img src="https://toppng.com/uploads/preview/x-cross-close-symbol-icon-button-gui-close-icon-grey-11553403425jbckbu0bie.png"
+                                        alt="iks"></p>
+                            </td>
+                            <td class="center">
+                                <p><img src="https://toppng.com/uploads/preview/x-cross-close-symbol-icon-button-gui-close-icon-grey-11553403425jbckbu0bie.png"
+                                        alt="iks"></p>
+                            </td>
+                            <td class="center">
+                                <p><img src="https://icon-library.com/images/green-check-icon-png/green-check-icon-png-13.jpg"
+                                        alt="green"> </p>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td class="bold">10 mySQL Database</td>
+                            <td class="center">
+                                <p><img src="https://toppng.com/uploads/preview/x-cross-close-symbol-icon-button-gui-close-icon-grey-11553403425jbckbu0bie.png"
+                                        alt="iks"></p>
+                            </td>
+                            <td class="center">
+                                <p><img src="https://icon-library.com/images/green-check-icon-png/green-check-icon-png-13.jpg"
+                                        alt="green"> </p>
+                            </td>
+                            <td class="center">
+                                <p><img src="https://icon-library.com/images/green-check-icon-png/green-check-icon-png-13.jpg"
+                                        alt="green"> </p>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td class="bold">25 mySQL Database</td>
+                            <td class="center">
+                                <p><img src="https://icon-library.com/images/green-check-icon-png/green-check-icon-png-13.jpg"
+                                        alt="green"> </p>
+                            </td>
+                            <td class="center">
+                                <p><img src="https://icon-library.com/images/green-check-icon-png/green-check-icon-png-13.jpg"
+                                        alt="green"> </p>
+                            </td>
+                            <td class="center">
+                                <p><img src="https://icon-library.com/images/green-check-icon-png/green-check-icon-png-13.jpg"
+                                        alt="green"> </p>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td class="bold">50 mySQL Database</td>
+                            <td class="center">
+                                <p><img src="https://toppng.com/uploads/preview/x-cross-close-symbol-icon-button-gui-close-icon-grey-11553403425jbckbu0bie.png"
+                                        alt="iks"></p>
+                            </td>
+                            <td class="center">
+                                <p><img src="https://icon-library.com/images/green-check-icon-png/green-check-icon-png-13.jpg"
+                                        alt="green"> </p>
+                            </td>
+                            <td class="center">
+                                <p><img src="https://icon-library.com/images/green-check-icon-png/green-check-icon-png-13.jpg"
+                                        alt="green"> </p>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td class="bold">25 GB of Storage</td>
+                            <td class="center">
+                                <p><img src="https://toppng.com/uploads/preview/x-cross-close-symbol-icon-button-gui-close-icon-grey-11553403425jbckbu0bie.png"
+                                        alt="iks"></p>
+                            </td>
+                            <td class="center">
+                                <p><img src="https://icon-library.com/images/green-check-icon-png/green-check-icon-png-13.jpg"
+                                        alt="green"> </p>
+                            </td>
+                            <td class="center">
+                                <p><img src="https://icon-library.com/images/green-check-icon-png/green-check-icon-png-13.jpg"
+                                        alt="green"> </p>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td class="bold">80 GB of Storage</td>
+                            <td class="center">
+                                <p><img src="https://icon-library.com/images/green-check-icon-png/green-check-icon-png-13.jpg"
+                                        alt="green"> </p>
+                            </td>
+                            <td class="center">
+                                <p><img src="https://icon-library.com/images/green-check-icon-png/green-check-icon-png-13.jpg"
+                                        alt="green"> </p>
+                            </td>
+                            <td class="center">
+                                <p><img src="https://icon-library.com/images/green-check-icon-png/green-check-icon-png-13.jpg"
+                                        alt="green"> </p>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td class="bold">500 mySQL Database</td>
+                            <td class="center">
+                                <p><img src="https://toppng.com/uploads/preview/x-cross-close-symbol-icon-button-gui-close-icon-grey-11553403425jbckbu0bie.png"
+                                        alt="iks"></p>
+                            </td>
+                            <td class="center">
+                                <p><img src="https://icon-library.com/images/green-check-icon-png/green-check-icon-png-13.jpg"
+                                        alt="green"> </p>
+                            </td>
+                            <td class="center">
+                                <p><img src="https://icon-library.com/images/green-check-icon-png/green-check-icon-png-13.jpg"
+                                        alt="green"> </p>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td class="bold">Premium Support</td>
+                            <td class="center">
+                                <p><img src="https://toppng.com/uploads/preview/x-cross-close-symbol-icon-button-gui-close-icon-grey-11553403425jbckbu0bie.png"
+                                        alt="iks"></p>
+                            </td>
+                            <td class="center">
+                                <p><img src="https://toppng.com/uploads/preview/x-cross-close-symbol-icon-button-gui-close-icon-grey-11553403425jbckbu0bie.png"
+                                        alt="iks"></p>
+                            </td>
+                            <td class="center">
+                                <p><img src="https://icon-library.com/images/green-check-icon-png/green-check-icon-png-13.jpg"
+                                        alt="green"> </p>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td class="bold">VIP Support</td>
+                            <td class="center">
+                                <p><img src="https://toppng.com/uploads/preview/x-cross-close-symbol-icon-button-gui-close-icon-grey-11553403425jbckbu0bie.png"
+                                        alt="iks"></p>
+                            </td>
+                            <td class="center">
+                                <p><img src="https://toppng.com/uploads/preview/x-cross-close-symbol-icon-button-gui-close-icon-grey-11553403425jbckbu0bie.png"
+                                        alt="iks"></p>
+                            </td>
+                            <td class="center">
+                                <p><img src="https://icon-library.com/images/green-check-icon-png/green-check-icon-png-13.jpg"
+                                        alt="green"> </p>
+                            </td>
+                        </tr>
+                    </table>
+                </div>
+            </div>
+
+            <div class="main-container-places-column">
+                <div class="main-p-under-table-container">
+                    <p class="main-p-under-table-font">
+                        The above prices do not include applicable taxes based on your billing address. The final price
+                        will be
+                        displayed on the checkout page, before the payment is completed
+                    </p>
+                </div>
+            </div>
             <div class="main-container-places-row">metody płatności</div>
             <div class="main-container-places-row">trial</div>
             <div class="main-container-places-column">kolejny h2 np</div>
             <div class="main-container-places-row">pytania odp</div>
             <div class="main-container-places-row">ostatni klik z pytaniem</div>
-           
-            
+
+
 
         </main>
         <footer class="footer-container">
